update weird spacing stuff from previous revision fixed in the most bootleg of ways

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    outline: 1px red solid;
+    /* outline: 1px red solid; */
     
    }
 
@@ -12,12 +12,20 @@
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(grey,white);
     width: 970px;
-    height: 500px;
-    z-index: -1;
+    height: 900px;
 }
 
 /* BEGIN CONTENT BOX (The whole site) */
+.content{
+    width: 970px;
+    height: 900px;
+    z-index: -1;
+}
 /* HEADER ZONE */
+.container .header{
+    background-color: white;
+}
+
 .container .header h1{
     margin: 40px 0px 10px 100px;
     width: auto;
@@ -26,7 +34,6 @@
 }
 
 .container .header h2{
-    width="970px";
     padding: 10px 0px;
     background: linear-gradient(blue,white,blue);
     color: white;
@@ -46,6 +53,7 @@
 /* VERT BAR ON THE LEFT */
 .left-vert-bar{
     width: 180px;
+    height: 450px;
     font-size: 10pt;
     font-weight: bold;
     display: inline-block;
@@ -202,9 +210,13 @@
 /* BEGIN CLIENTS AND SERVERS MAIN BODY SECTION */
 
 .clients-and-servers{
-    margin-left: 200px;
-    width: 600px;
     display: inline-block;
-    vertical-align: top;
-    position:relative;
+    list-style: none;
+    width: 700px;
+    position:absolute;
+    left: 200px;
+    top:210px;
+}
+.clients-and-servers h2{
+    margin-top:10px;
 }
